Fixes contrast and Aria errors

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,7 +4,7 @@
 // $primary: #1684d8; // Favorite Blue
 // $secondary: #0057ff; // Dark blue
 $primary: #0057ff; // Dark blue
-$secondary: #1684d8; // Favorite Blue
+$secondary: #1572b9; // Favorite Blue
 $success: #2b8023; // Green
 $info: #ecf8ff; // Light blue
 $warning: #ffbcbc; // Light red
