--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -198,7 +198,7 @@ a {
   .countdown-display {
     font-weight: 400 !important;
     font-size: 0.9rem !important;
-    color: #ff0000 !important;
+    color: #c20000 !important;
     background-color: #ffffff !important;
     box-shadow: 0 0 0 !important;
     margin: 2px 0 0 5px !important;
